--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Campain Craze</title>
   </head>
   <body>
-    <div id="root">
-      <h1>hello</h1>
-    </div>
+    <div id="root"></div>
   </body>
   <script type="module" src="/src/App.js"></script>
 </html>
