--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <base href="campaign-craze" />
+    <base href="/campaign-craze/" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Campain Craze</title>
+    <title>Campaign Craze</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
-  <script type="module" src="/src/App.js"></script>
+  <script type="module" src="src/App.js"></script>
 </html>
