--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <base href="/campaign-craze/" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/assets/styles/main.css" />
     <title>Campaign Craze</title>
   </head>
   <body>
